// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consonant/FilterItem Check snapshots should renders correctly with desktop width 1`] = `
<section
  className="consonant-wrapper"
  onClick={[Function]}
  role="group"
>
  <div
    className="consonant-wrapper--inner"
  >
    <span>
      <div
        className="consonant-left-filters"
        data-testid="consonant-filters__left"
      >
        <div
          className="consonant-left-filters--header"
        >
          <h3
            className="consonant-left-filters--desk-title"
          >
            leftPanel.header
          </h3>
          <button
            className="consonant-left-filters--clear-link"
            data-testid="left-filter-panel-clear-all-btn"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            leftPanel.clearAllFiltersText
          </button>
        </div>
        <div
          className="consonant-search"
          data-testid="filtersSideSearch"
        >
          <label
            htmlFor="consonant-search"
          >
            <span
              className="consonant-search--input-title"
            >
              i18n.leftFilterPanel.searchTitle
            </span>
            <span
              className="consonant-search--input-wrapper"
            >
              <input
                className="consonant-search--input"
                data-testid="search-input"
                id="consonant-search"
                onChange={[Function]}
                onClick={[Function]}
                placeholder="i18n.leftFilterPanel.searchPlaceholderText"
                required={true}
                type="search"
                value=""
              />
              <button
                className="consonant-search--input-clear"
                onClick={[Function]}
                tabIndex="0"
                title="Click to clear search query"
                type="button"
              >
                clear
              </button>
            </span>
          </label>
        </div>
        <button
          className="bookmarks"
          data-testid="bookmarks"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="bookmarks--ico-wrapper"
          >
            <span
              className="bookmarks--ico"
              data-testid="bookmarks--ico"
              style={
                Object {
                  "backgroundImage": "url(http://placehold.it/150x150/red)",
                }
              }
            />
            <span
              className="bookmarks--title"
            >
              i18n.leftFilterPanel.filterTitle
            </span>
          </span>
          <span
            className="bookmarks--item-badge"
            data-testid="bookmarks--item-badge"
          >
            0
          </span>
        </button>
      </div>
    </span>
    <span>
      <aside
        className="consonant-filters-info"
        data-testid="consonant-filters__info"
      >
        <div
          className="consonant-filters-info--wrapper"
        >
          <h2
            className="consonant-filters-info--title"
            data-testid="title"
          >
            i18n.title
          </h2>
          <span
            className="consonant-filters-info--results"
            data-testid="results"
          >
            i18n.totalResultsText {total}
          </span>
        </div>
        <div
          className="consonant-filters-info--search"
        />
        <div
          className="consonant-select"
        >
          <button
            className="consonant-select--btn"
            data-testid="select-button"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            featured
          </button>
          <div
            className="consonant-select--options consonant-select--options_right"
            data-testid="consonant-select--options"
          >
            <button
              className="consonant-select--option consonant-select--option_selected"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              featured
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Title: (A-Z)
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Title: (Z-A)
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Date
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Date: (Newest to oldest)
            </button>
          </div>
        </div>
      </aside>
    </span>
  </div>
</section>
`;

exports[`Consonant/FilterItem Check snapshots should renders correctly without featured cards 1`] = `
<section
  className="consonant-wrapper"
  onClick={[Function]}
  role="group"
>
  <div
    className="consonant-wrapper--inner"
  >
    <span>
      <div
        className="consonant-left-filters"
        data-testid="consonant-filters__left"
      >
        <div
          className="consonant-left-filters--header"
        >
          <h3
            className="consonant-left-filters--desk-title"
          >
            leftPanel.header
          </h3>
          <button
            className="consonant-left-filters--clear-link"
            data-testid="left-filter-panel-clear-all-btn"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            leftPanel.clearAllFiltersText
          </button>
        </div>
        <div
          className="consonant-search"
          data-testid="filtersSideSearch"
        >
          <label
            htmlFor="consonant-search"
          >
            <span
              className="consonant-search--input-title"
            >
              i18n.leftFilterPanel.searchTitle
            </span>
            <span
              className="consonant-search--input-wrapper"
            >
              <input
                className="consonant-search--input"
                data-testid="search-input"
                id="consonant-search"
                onChange={[Function]}
                onClick={[Function]}
                placeholder="i18n.leftFilterPanel.searchPlaceholderText"
                required={true}
                type="search"
                value=""
              />
              <button
                className="consonant-search--input-clear"
                onClick={[Function]}
                tabIndex="0"
                title="Click to clear search query"
                type="button"
              >
                clear
              </button>
            </span>
          </label>
        </div>
        <button
          className="bookmarks"
          data-testid="bookmarks"
          onClick={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="bookmarks--ico-wrapper"
          >
            <span
              className="bookmarks--ico"
              data-testid="bookmarks--ico"
              style={
                Object {
                  "backgroundImage": "url(http://placehold.it/150x150/red)",
                }
              }
            />
            <span
              className="bookmarks--title"
            >
              i18n.leftFilterPanel.filterTitle
            </span>
          </span>
          <span
            className="bookmarks--item-badge"
            data-testid="bookmarks--item-badge"
          >
            0
          </span>
        </button>
        <div
          className="consonant-left-filters--list"
        >
          <div
            className="consonant-left-filter consonant-left-filter_opened"
            data-testid="filter-item"
          >
            <div
              className="consonant-left-filter--inner"
            >
              <h3
                className="consonant-left-filter--name"
              >
                <img
                  alt=""
                  loading="lazy"
                  src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Check_green_icon.svg"
                  width="16"
                />
                <button
                  className="consonant-left-filter--link"
                  data-testid="filter-item-link"
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  Topic
                  <div
                    className="consonant-left-filter--selected-items-qty"
                    data-qty=""
                  />
                </button>
              </h3>
              <ul
                className="consonant-left-filter--items"
                data-testid="filter-group"
              >
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="we-retail:activity/hiking"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="we-retail:activity/hiking"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="we-retail:activity/hiking"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      Business Continuity
                    </span>
                  </label>
                </li>
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="we-retail:activity/biking"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="we-retail:activity/biking"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="we-retail:activity/biking"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      Creativity and Design
                    </span>
                  </label>
                </li>
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="adobe-com-enterprise:topic/customer-intelligence"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="adobe-com-enterprise:topic/customer-intelligence"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="adobe-com-enterprise:topic/customer-intelligence"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      Customer Intelligence
                    </span>
                  </label>
                </li>
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="adobe-com-enterprise:topic/data-management-platform"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="adobe-com-enterprise:topic/data-management-platform"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="adobe-com-enterprise:topic/data-management-platform"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      Data Management Platform
                    </span>
                  </label>
                </li>
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="adobe-com-enterprise:topic/digital-foundation"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="adobe-com-enterprise:topic/digital-foundation"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="adobe-com-enterprise:topic/digital-foundation"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      Digital Foundation
                    </span>
                  </label>
                </li>
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="adobe-com-enterprise:topic/digital-trends"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="adobe-com-enterprise:topic/digital-trends"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="adobe-com-enterprise:topic/digital-trends"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      Digital Trends
                    </span>
                  </label>
                </li>
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="adobe-com-enterprise:topic/document-management"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="adobe-com-enterprise:topic/document-management"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="adobe-com-enterprise:topic/document-management"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      Document Management
                    </span>
                  </label>
                </li>
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="adobe-com-enterprise:topic/marketing-automation"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="adobe-com-enterprise:topic/marketing-automation"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="adobe-com-enterprise:topic/marketing-automation"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      Marketing Automation
                    </span>
                  </label>
                </li>
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="adobe-com-enterprise:topic/personalization"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="adobe-com-enterprise:topic/personalization"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="adobe-com-enterprise:topic/personalization"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      Personalization
                    </span>
                  </label>
                </li>
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="adobe-com-enterprise:topic/Stock"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="adobe-com-enterprise:topic/Stock"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="adobe-com-enterprise:topic/Stock"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      Stock
                    </span>
                  </label>
                </li>
              </ul>
              <div
                className="consonant-left-filter--footer"
              >
                <span
                  className="consonant-left-filter--footer-res-qty"
                >
                  leftPanel.mobile.group.totalResultsText0
                </span>
                <button
                  className="consonant-left-filter--footer-btn"
                  onClick={[Function]}
                  type="button"
                >
                  leftPanel.mobile.group.doneBtnText
                </button>
              </div>
            </div>
          </div>
          <div
            className="consonant-left-filter"
            data-testid="filter-item"
          >
            <div
              className="consonant-left-filter--inner"
            >
              <h3
                className="consonant-left-filter--name"
              >
                <img
                  alt=""
                  loading="lazy"
                  src="https://upload.wikimedia.org/wikipedia/commons/e/e0/Check_green_icon.svg"
                  width="16"
                />
                <button
                  className="consonant-left-filter--link"
                  data-testid="filter-item-link"
                  onClick={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  Availability
                  <div
                    className="consonant-left-filter--selected-items-qty"
                    data-qty=""
                  />
                </button>
              </h3>
              <ul
                className="consonant-left-filter--items"
                data-testid="filter-group"
              >
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="adobe-com-enterprise:availability/on-demand"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="adobe-com-enterprise:availability/on-demand"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="adobe-com-enterprise:availability/on-demand"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      On-Demand
                    </span>
                  </label>
                </li>
                <li
                  className="consonant-left-filter--items-item"
                  data-testid="filter-group-item"
                >
                  <label
                    className="consonant-left-filter--items-item-label"
                    htmlFor="adobe-com-enterprise:availability/upcoming"
                  >
                    <input
                      checked={false}
                      data-testid="list-item-checkbox"
                      id="adobe-com-enterprise:availability/upcoming"
                      onChange={[Function]}
                      tabIndex="0"
                      type="checkbox"
                      value="adobe-com-enterprise:availability/upcoming"
                    />
                    <span
                      className="consonant-left-filter--items-item-checkmark"
                    />
                    <span
                      className="consonant-left-filter--items-item-name"
                    >
                      Upcoming
                    </span>
                  </label>
                </li>
              </ul>
              <div
                className="consonant-left-filter--footer"
              >
                <span
                  className="consonant-left-filter--footer-res-qty"
                >
                  leftPanel.mobile.group.totalResultsText0
                </span>
                <button
                  className="consonant-left-filter--footer-btn"
                  onClick={[Function]}
                  type="button"
                >
                  leftPanel.mobile.group.doneBtnText
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
    <span>
      <aside
        className="consonant-filters-info"
        data-testid="consonant-filters__info"
      >
        <div
          className="consonant-filters-info--wrapper"
        >
          <h2
            className="consonant-filters-info--title"
            data-testid="title"
          >
            i18n.title
          </h2>
          <span
            className="consonant-filters-info--results"
            data-testid="results"
          >
            i18n.totalResultsText {total}
          </span>
        </div>
        <div
          className="consonant-filters-info--search"
        />
        <div
          className="consonant-select"
        >
          <button
            className="consonant-select--btn"
            data-testid="select-button"
            onClick={[Function]}
            tabIndex="0"
            type="button"
          >
            featured
          </button>
          <div
            className="consonant-select--options consonant-select--options_right"
            data-testid="consonant-select--options"
          >
            <button
              className="consonant-select--option consonant-select--option_selected"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              featured
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Title: (A-Z)
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Title: (Z-A)
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Date
            </button>
            <button
              className="consonant-select--option"
              data-testid="select-option"
              onClick={[Function]}
              tabIndex="-1"
              type="button"
            >
              Date: (Newest to oldest)
            </button>
          </div>
        </div>
      </aside>
      <div
        className="consonant-loader consonant-loader_big consonant-loader_absolute"
        data-testid="consonant-loader"
      >
        <div />
        <div />
        <div />
        <div />
      </div>
    </span>
  </div>
</section>
`;
